Closed Bug 657964 Opened 15 years ago Closed 15 years ago

FileReader should throw when abort is called and readystate is not LOADING

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla6

People

(Reporter: khuey, Assigned: khuey)

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

Attached patch PatchSplinter Review
As discussed on the list. I think we should slip this into 6.
Attachment #533315 - Flags: review?(jonas)
Assignee: nobody → khuey
Status: NEW → ASSIGNED
OS: Windows 7 → All
Hardware: x86 → All
Version: unspecified → Trunk
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Documentation updated: https://developer.mozilla.org/en/DOM/FileReader#abort%28%29 And mentioned on Firefox 6 for developers.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: