Bug 657964: FileReader should throw when abort() is called and readystate is not LOADING. r=sicking